--- a/index.html
+++ b/index.html
@@ -1203,20 +1203,402 @@
 
     // Horários dos professores
     const horariosProfessores = {
-      "ADEMAR": {
-        "MANHA": ["1D", "1E", "1E", "1F", "1F", "1B", "1B", "1A", "1A", "1D", "1C", "1C"],
-        "TARDE": ["9C", "9B", "9B", "1G", "1G", "9A", "9A", "9C", "9C", "9D", "9A", "9D"],
-        "NOITE": ["2F", "2G", "2G", "2H", "2F", "2H", "1H", "1H", "2F", "2G", "2G", "2H"]
-      },
-      "ALEX": {
-        "MANHA": ["1A", "1B", "1B", "1C", "1C", "1D", "1D", "1E", "1E", "1F", "1F", "1A"],
-        "TARDE": ["9A", "9B", "9B", "9C", "9C", "9D", "9D", "9A", "9A", "9B", "9C", "9D"],
-        "NOITE": ["1H", "1I", "1I", "2F", "2F", "2G", "2G", "2H", "2H", "2I", "2I", "1H"]
-      },
-      "ALEXSANDRA": {
-        "MANHA": ["1B", "1C", "1C", "1D", "1D", "1E", "1E", "1F", "1F", "1A", "1A", "1B"],
-        "TARDE": ["9B", "9C", "9C", "9D", "9D", "9A", "9A", "9B", "9B", "9C", "9D", "9A"],
-        "NOITE": ["2F", "2G", "2G", "2H", "2H", "2I", "2I", "1H", "1H", "1I", "1I", "2F"]
+     "ADEMAR": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "1D", "1E"],
+    "TERÇA MANHÃ": ["", "", "", "", "1F", "1F"],
+    "QUARTA MANHÃ": ["", "", "", "", "1B", "1A"],
+    "QUINTA MANHÃ": ["", "", "", "", "1D", "1C"],
+    "SEXTA MANHÃ": ["", "", "", "", "1B", "1A"],
+    "SEGUNDA TARDE": ["9A", "9A", "9C", "9C", "9D", "9A"],
+    "TERÇA TARDE": ["9D", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["9B", "9D", "", "", "", ""],
+    "SEXTA TARDE": ["9C", "9B", "9B", "", "1G", "1G"],
+    "SEGUNDA NOITE": ["2F", "2H", "", "1H", "1H"],
+    "TERÇA NOITE": ["2F", "2H", "", "1H", "1H"],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["2F", "", "2G", "2G", "2H"]
+  },
+  "ANTONIO": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["3G", "2F", "2F", "2G", "2G"],
+    "SEXTA NOITE": ["3G", "2H", "2H", "1I", "1I"]
+  },
+  "ANTONIO CARLOS": {
+    "SEGUNDA MANHÃ": ["2B", "2B", "2E", "2E", "", ""],
+    "TERÇA MANHÃ": ["2C", "2C", "2D", "2D", "2A", ""],
+    "QUARTA MANHÃ": ["2D", "2D", "2E", "2E", "", ""],
+    "QUINTA MANHÃ": ["2A", "2A", "", "", "", ""],
+    "SEXTA MANHÃ": ["2C", "2C", "2A", "2B", "2B", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  },
+  "EDIANE": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "2ADM", "2ADM", "2ADM", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["7C", "7B", "6F/R", "6F/R", "9C/O", "9D/O"],
+    "TERÇA TARDE": ["7B", "7D", "7C", "9B/OP", "6E/R", "9B/OP"],
+    "QUARTA TARDE": ["9C/OP", "7B", "", "", "", ""],
+    "QUINTA TARDE": ["6F", "7D", "9D/OP", "7D", "7C", "7D"],
+    "SEXTA TARDE": ["6E/R", "7C", "6F", "6F", "7B", "6F"],
+    "SEGUNDA NOITE": ["3F", "3F", "2G", "2G", "2H"],
+    "TERÇA NOITE": ["2G", "2F", "2F", "3E/OP", "3E/OP"],
+    "QUARTA NOITE": ["2H", "2H", "2H", "2F", "2F"],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["2G", "3G/OP", "3G/OP", "3D/OP", "3D/OP"]
+  },
+  "ELIAS": {
+    "SEGUNDA MANHÃ": ["2E", "2E", "3B", "3B", "2C", "2C"],
+    "TERÇA MANHÃ": ["1C", "1C", "2ADM/Q", "2ADM/Q", "3A", "3A"],
+    "QUARTA MANHÃ": ["2B", "2B", "1A", "1A", "2A", "1F"],
+    "QUINTA MANHÃ": ["1B", "1B", "3C", "3C", "1E", "1E"],
+    "SEXTA MANHÃ": ["1D", "1D", "1F", "2A", "2D", "2D"],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["9A", "8E/PV", "", "9A", "", "8D/PV"],
+    "SEXTA TARDE": ["", "", "1G", "1G", "9C", "9C"],
+    "SEGUNDA NOITE": ["1H/Q", "1H/Q", "", "1H/EF", "1H/EF"],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "1H/F", "1H/F"],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "1H/F", "1H/F"]
+  },
+  "FÁBIO": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "2F", "2G", "1I", "2H"],
+    "SEGUNDA NOITE": ["1I", "2F", "1I", "3D", "1I"],
+    "TERÇA NOITE": ["3D", "3E", "2H", "2H", "2F"],
+    "QUARTA NOITE": ["2G", "3E", "2F", "2G", "3E"],
+    "QUINTA NOITE": ["2H", "3D", "2G", "1I", "2H"],
+    "SEXTA NOITE": ["", "3E", "3D", "2F", "2G"]
+  },
+  "JANINA": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["2A", "2A", "2B", "", "", ""],
+    "QUARTA MANHÃ": ["3C/BIOT", "3C/BIOT", "2C", "2C", "", ""],
+    "QUINTA MANHÃ": ["3A", "3A", "3B", "3B", "", ""],
+    "SEXTA MANHÃ": ["2E", "2D", "2D", "2E", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "3D", "3F", "3D"],
+    "SEXTA NOITE": ["", "", "3E", "3E", "3F"]
+  },
+  "JUAREZ": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "3A", "3A", "3C", "3C"],
+    "QUARTA MANHÃ": ["1E", "1E", "1F", "", "", ""],
+    "QUINTA MANHÃ": ["1F", "1D", "1D", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "3B", "3B"],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["2H", "2H", "3F", "3E", "3E"],
+    "TERÇA NOITE": ["2H/Q", "3D", "3D", "2G", "2G"],
+    "QUARTA NOITE": ["2F/FÍS", "2G", "2G", "1I", "1I"],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["1I", "1I", "3F", "2H/Q", "2F"]
+  },
+  "MARCIEL": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["7E", "7E", "7B", "9B/PV", "8C", "8C"],
+    "TERÇA TARDE": ["9A/PV", "8E", "8E", "8A", "7C", "7D"],
+    "QUARTA TARDE": ["8C", "7D", "7F", "7F", "8D", "8D"],
+    "QUINTA TARDE": ["9C/PV", "8D", "8E", "8B", "8B", "7B"],
+    "SEXTA TARDE": ["8A", "8A", "8B", "7C", "7A", "7A"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["3D", "3D", "", "", ""]
+  },
+  "MOISÉS": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["3E", "3E", "3G", "3G", "3D"],
+    "TERÇA NOITE": ["3E/OM", "3G", "3G", "3F/OM", "3F/OM"],
+    "QUARTA NOITE": ["3G/OM", "3D/OM", "3D/OM", "3F", "3F"],
+    "QUINTA NOITE": ["2G/EF", "2G/EF", "3F/OM", "2F/EF", "2F/EF"],
+    "SEXTA NOITE": ["3F", "3F", "", "3G", "3G"]
+  },
+  "PAULO": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["2E", "2E", "2E/L", "2E/L", "", ""],
+    "QUARTA MANHÃ": ["1F/FIL", "1F/FIL", "2D/OR", "", "2D/SOC", "2D/SOC"],
+    "QUINTA MANHÃ": ["2B", "2B", "2C/OR", "2E/OR", "2C", "2C"],
+    "SEXTA MANHÃ": ["2ADM", "2ADM", "1E/F", "1E/F", "2A/S", "2A/S"],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["2G", "1I", "2H", "", "2F"],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["2H", "2G", "2F", "", ""]
+  },
+  "PEDRO": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "6F", "6F"],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["3F", "3G", "3E", "3G", "1I"],
+    "SEXTA NOITE": ["", "", "1I", "3F", "3E"]
+  },
+  "RODRIGO": {
+    "SEGUNDA MANHÃ": ["1D", "1D", "1C", "1C", "1F", "1F"],
+    "TERÇA MANHÃ": ["1B", "1B", "1A", "1A", "1E", "1E"],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["", "", "", "", "", ""],
+    "SEGUNDA NOITE": ["3D", "2G", "2F", "2H", "3G"],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["3D", "3G", "3E", "", ""],
+    "QUINTA NOITE": ["1I", "3F", "2H", "", ""],
+    "SEXTA NOITE": ["3E", "2F", "", "", ""]
+  },
+  "VIVIANE": {
+    "SEGUNDA MANHÃ": ["", "6B", "1B", "6B", "3A", "1D"],
+    "TERÇA MANHÃ": ["6C", "1F", "1E", "1B", "6C", "1C"],
+    "QUARTA MANHÃ": ["1D", "6D", "6A", "1F", "1C", "3A"],
+    "QUINTA MANHÃ": ["1E", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["6A", "6D", "", "", "", ""],
+    "SEGUNDA TARDE": ["7B/T", "8B/PV", "9D/PV", "7D/T", "7F/T", "7F/T"],
+    "TERÇA TARDE": ["6F/T", "7F/R", "6F/T", "7F/PV", "7A/T", "7F/R"],
+    "QUARTA TARDE": ["7E/T", "7C/T", "7A/R", "7A/R", "7C/T", "7B/T"],
+    "QUINTA TARDE": ["7E", "", "", "", "", ""],
+    "SEXTA TARDE": ["7E/R", "6E/T", "7E/R", "7A/T", "6E/T", "7D/T"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "1H/R", "1H/P", "1H/P"],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["1H/P", "1H/P", "1H/R", "", ""]
+  },
+  "BETE": {
+    "SEGUNDA MANHÃ": ["1A", "1A", "1A", "1E", "1B", "1B"],
+    "TERÇA MANHÃ": ["1E/EF", "1E/EF", "1D", "1D", "1B", "1A"],
+    "QUARTA MANHÃ": ["1C/EF", "1C/EF", "1E", "1E", "1D/EF", "1D/EF"],
+    "QUINTA MANHÃ": ["1C", "1C", "1E", "1B", "1A/EF", "1A/EF"],
+    "SEXTA MANHÃ": ["1B/EF", "1B/EF", "1D", "1D", "1C", "1C"],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["", "", "", "", "", ""],
+    "SEXTA TARDE": ["1G", "1G", "", "", "", ""],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  },
+  "CAROL": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "1G", "1G", "7A", "7A"],
+    "TERÇA TARDE": ["", "9D", "9D", "9A", "7B", "7B"],
+    "QUARTA TARDE": ["", "9C", "9C", "7B", "7A", ""],
+    "QUINTA TARDE": ["", "9A", "9B", "9B", "9C", "9D"],
+    "SEXTA TARDE": ["9B", "9C", "9D", "9B", "9A", "9A"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  },
+  "DANIEL FREITAS": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "9B", "9B", "9D", "1G", "1G"],
+    "TERÇA TARDE": ["", "9A", "9B", "8E/EF", "8E/EF", "9C"],
+    "QUARTA TARDE": ["", "9A", "9D", "9D", "9B", "9B"],
+    "QUINTA TARDE": ["", "9C", "9A", "1G", "1G", "9C"],
+    "SEXTA TARDE": ["9A", "9A", "9C", "9C", "9D", "9D"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["1H", "1H", "", "", ""],
+    "QUINTA NOITE": ["1H", "1H", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  },
+  "INGRYD": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHã": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["8E", "8D", "8D", "8E", "6E", "6E"],
+    "TERÇA TARDE": ["8C", "", "6F", "8D", "8D", ""],
+    "QUARTA TARDE": ["6F", "6E", "6E", "6F", "6F", "8E"],
+    "QUINTA TARDE": ["8C", "", "8C", "6E", "", ""],
+    "SEXTA TARDE": ["8E", "8C", "8C", "8E", "6F", "8D"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  },
+  "GENILTON": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "", "", "", "", ""],
+    "TERÇA TARDE": ["7E", "7E", "", "", "", ""],
+    "QUARTA TARDE": ["7D", "6F", "7B/PV", "6E", "7F", "7D"],
+    "QUINTA TARDE": ["7C", "7C", "6F", "6F", "6E", "6E"],
+    "SEXTA TARDE": ["7C", "7E", "7A/PV", "7D", "7F", "7F"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  };
+       "GELSON": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["2D/EF", "2D/EF", "3C/OM", "3C/OM", "3B/OM", "3B/OM"],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "1F", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", "1F"],
+    "SEGUNDA TARDE": ["8B", "", "", "", "", ""],
+    "TERÇA TARDE": ["", "", "8A", "", "", ""],
+    "QUARTA TARDE": ["", "", "", "", "", "8A"],
+    "QUINTA TARDE": ["8B", "", "", "", "", ""],
+    "SEXTA TARDE": ["8B", "8B", "8A", "8A", "8A", "8B"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  };
+  "KATIUSCIA": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "1A", "1A"],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["8A", "9C", "8B", "8C", "8E", "8E"],
+    "TERÇA TARDE": ["7C", "7A", "7A", "7D", "7D", "8B"],
+    "QUARTA TARDE": ["", "", "", "", "", ""],
+    "QUINTA TARDE": ["7B", "9B", "9C", "7B", "9B", "8A"],
+    "SEXTA TARDE": ["8C", "7F", "7F", "8D", "8D", "7C"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  },
+  "LUCIANO": {
+    "SEGUNDA MANHÃ": ["", "", "", "", "", ""],
+    "TERÇA MANHÃ": ["", "", "", "", "", ""],
+    "QUARTA MANHÃ": ["", "", "", "", "", ""],
+    "QUINTA MANHÃ": ["", "", "", "", "", ""],
+    "SEXTA MANHÃ": ["", "", "", "", "", ""],
+    "SEGUNDA TARDE": ["", "8A", "8A", "8D", "9A", "9C"],
+    "TERÇA TARDE": ["", "", "7E", "8B", "9C", "7E"],
+    "QUARTA TARDE": ["", "", "8C", "9B", "8B", "9D"],
+    "QUINTA TARDE": ["", "7F", "7F", "8C", "7E", "9B"],
+    "SEXTA TARDE": ["7F", "9D", "8D", "9A", "8E", "8E"],
+    "SEGUNDA NOITE": ["", "", "", "", ""],
+    "TERÇA NOITE": ["", "", "", "", ""],
+    "QUARTA NOITE": ["", "", "", "", ""],
+    "QUINTA NOITE": ["", "", "", "", ""],
+    "SEXTA NOITE": ["", "", "", "", ""]
+  };
+    "SOL": {
+    "SEGUNDA TARDE": ["X", "X", "X", "X", "X", "X"],
+    "TERÇA TARDE": ["X", "X", "X", "X", "X", "X"],
+    "QUARTA TARDE": ["X", "X", "X", "X", "X", "X"],
+    "QUINTA TARDE": ["X", "X", "X", "X", "X", "X"],
+    "SEXTA TARDE": ["X", "X", "X", "X", "X", "X"]
+  },
+  "FLÁVIA": {
+    "SEGUNDA MANHÃ": ["X", "X", "X", "X", "X", "X"],
+    "TERÇA MANHÃ": ["X", "X", "X", "X", "X", "X"],
+    "QUARTA MANHÃ": ["X", "X", "X", "X", "X", "X"],
+    "QUINTA MANHÃ": ["X", "X", "X", "X", "X", "X"],
+    "SEXTA MANHÃ": ["X", "X", "X", "X", "X", "X"]
+  },
+  "ANDRÉ": {
+    "SEGUNDA NOITE": ["X", "X", "X", "X", "X"],
+    "TERÇA NOITE": ["X", "X", "X", "X", "X"],
+    "QUARTA NOITE": ["X", "X", "X", "X", "X"],
+    "QUINTA NOITE": ["X", "X", "X", "X", "X"],
+    "SEXTA NOITE": ["X", "X", "X", "X", "X"]
+  }
+};
       }
     };
 
