--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
 
 "ANDREIA MADUREIRA REIS": "andreiamadureira@prof.educacao.sp.gov.br",
 
-"ANTONIO CARLS DE OLIVEIRA": "antoniocarloso@prof.educacao.sp.gov.br",
+"ANTONIO CARLOS DE OLIVEIRA": "antoniocarloso@prof.educacao.sp.gov.br",
 
 "ANTONIO RAMOS DE ARAUJO": "antonioramosaraujo@prof.educacao.sp.gov.br",
 
