--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@ rel="stylesheet">
    
   <div class="solution-banner"> 
     <img 
-src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiSzDhx5hyK70tNgSdiNd4esNRDmdTGDSC0O_wqjJ7lZT68g-NYA7KfZA2YiB9LbDUkhJRS_jKfj4hMSu8QiaaHydEzvn_OtpQ9hSNfL5EpTQycz54FHOVjoiJI2hbRN0QEWqNlVYPnDVj6JfunSA9sR6CZaSlUaJc9NkLGvJyxCbDU6zo18BstZMT1L6tN/s250/Captura_de_tela_2025-07-20_102344-removebg-preview.png" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" width="320" data-original-height="250" data-original-width="250" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiSzDhx5hyK70tNgSdiNd4esNRDmdTGDSC0O_wqjJ7lZT68g-NYA7KfZA2YiB9LbDUkhJRS_jKfj4hMSu8QiaaHydEzvn_OtpQ9hSNfL5EpTQycz54FHOVjoiJI2hbRN0QEWqNlVYPnDVj6JfunSA9sR6CZaSlUaJc9NkLGvJyxCbDU6zo18BstZMT1L6tN/s320/Captura_de_tela_2025-07-20_102344-removebg-preview.png"  
+src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiSzDhx5hyK70tNgSdiNd4esNRDmdTGDSC0O_wqjJ7lZT68g-NYA7KfZA2YiB9LbDUkhJRS_jKfj4hMSu8QiaaHydEzvn_OtpQ9hSNfL5EpTQycz54FHOVjoiJI2hbRN0QEWqNlVYPnDVj6JfunSA9sR6CZaSlUaJc9NkLGvJyxCbDU6zo18BstZMT1L6tN/s320/Captura_de_tela_2025-07-20_102344-removebg-preview.png"  
          alt="Logo da Escola"  
          class="logo-profissional"> 
     <p>SOLUÇÃO DE GERENCIAMENTO DE EQUIPAMENTOS</p> 
