--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@ MANHA</option>
  
       <div class="form-row"> 
         <div class="form-group"> 
-          <label>AULA(S):</label> 
+          <label>SELECIONE A(S) AULA(S):</label> 
           <div id="aula-container" class="aula-container"> 
             <!-- Checkboxes para aulas serão inseridos aqui --> 
           </div> 
