--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@ const horariosProfessores = {
 "TARDE": ["X", "X", "X", "X", "X", "X"], 
 "NOITE": [] 
 }, 
-"CAROL": { 
+"CAROLINA": { 
 "MANHA": [], 
 "TARDE": ["1G", "1G", "7A", "7A", "9D", "9D", "9A", "7B", "7B", "9B", "9B", "9C", "9D"], 
 "NOITE": [] 
