--- a/index.html
+++ b/index.html
@@ -1027,15 +1027,14 @@
 
   <script>
     // CONFIGURAÇÃO DO FIREBASE
-    const firebaseConfig = {
-      apiKey: "AIzaSyBOoXyjLQPfgzQM06LVy-TRSPdSM_8CjcE",
-      authDomain: "gerenciamentoaparelho.firebaseapp.com",
-      projectId: "gerenciamentoaparelho",
-      storageBucket: "gerenciamentoaparelho.appspot.com",
-      messagingSenderId: "751628186418",
-      appId: "1:751628186418:web:dd68af74d9e3723c179d2b",
-      measurementId: "G-K02ZZQ4JBK"
-    };
+    apiKey : "AIzaSyBOoXyjLQPfgzQM06LVy-TRSPdSM_8CjcE" , 
+  authDomain: "gerenciamentoaparelho.firebaseapp.com",
+  databaseURL: "https://gerenciamentoaparelho-default-rtdb.firebaseio.com",
+  projectId: "gerenciamentoaparelho",
+  storageBucket: "gerenciamentoaparelho.firebasestorage.app",
+  messagingSenderId : "751628186418" , 
+  appId : "1:751628186418:web:dd68af74d9e3723c179d2b" , 
+  measurementId : "G-K02ZZQ4JBK" 
 
     // INICIALIZA O FIREBASE
     firebase.initializeApp(firebaseConfig);
