--- a/index.html
+++ b/index.html
@@ -977,30 +977,26 @@
 
   <script>
     // Dados dos professores
-    const teacherEmails = {
-      "ADEMAR RIBEIRO DE SOUZA": "ademarribeirosouza@prof.educacao.sp.gov.br",
+   const teacherEmails = {
       "ALEX LUTH PEREIRA MARANHAO": "luth@prof.educacao.sp.gov.br",
-      "ALEXANDRE SILVA LIMA": "alexandresilvalima@prof.educacao.sp.gov.br",
       "ALEXSANDRA PAULA VARELLA DE SOUZA": "avarella@prof.educacao.sp.gov.br",
-      "ALINE CARDOSO": "aline.cardoso@servidor.educacao.sp.gov.br",
       "ALISON VASCONCELOS BESERRA": "alisonv@prof.educacao.sp.gov.br",
       "AMAURI TEODORO DE OLIVEIRA": "amaurit@prof.educacao.sp.gov.br",
-      "ANA PAULA DE OLIVEIRA SOUZA": "ana.souza59@servidor.educacao.sp.gov.br",
       "ANA PAULA DOS SANTOS": "paulasantosa@prof.educacao.sp.gov.br",
-      "ANDRE LUIZ TAVARES": "andreltavares@prof.educacao.sp.gov.br",
       "ANDREIA DOS SANTOS FREITAS": "sanfreitas@prof.educacao.sp.gov.br",
       "ANDREIA MADUREIRA REIS": "andreiamadureira@prof.educacao.sp.gov.br",
-      "ANTONIO CARLS DE OLIVEIRA": "antoniocarloso@prof.educacao.sp.gov.br",
+      "ANTONIO CARLOS DE OLIVEIRA": "antoniocarloso@prof.educacao.sp.gov.br",
       "ANTONIO RAMOS DE ARAUJO": "antonioramosaraujo@prof.educacao.sp.gov.br",
       "ANTONIO WILTON WANDERLEY CABRAL": "antoniowilton@prof.educacao.sp.gov.br",
       "AUGUSTO LINO PESSOA NETO": "augustolino@prof.educacao.sp.gov.br",
       "AUREA MARIA DE JESUS MARQUES": "aureamaria@prof.educacao.sp.gov.br",
       "CAROLINA PERNOMIAN PARUSSOLO": "carolinapernomian@prof.educacao.sp.gov.br",
       "CASSIA OLIVEIRA ANTONIAZI": "cassiaosilva@prof.educacao.sp.gov.br",
-      "CICERO FERREIRA": "cicero.ferreira@servidor.educacao.sp.gov.br",
+      "CLAUDINEIA DE AGUIAR LIMA": "aguiarl@prof.educacao.sp.gov.br",
       "DANIEL DE FREITAS ALMEIDA": "danielalmeida@prof.educacao.sp.gov.br",
       "DANIEL LOPES BARBOSA": "daniellopesbarbosa@prof.educacao.sp.gov.br",
       "DANIELA FERREIRA LIMA": "danielaflima@prof.educacao.sp.gov.br",
+      "DANIELLE LUCIA BATISTA DE ALMEIDA": "danielelucia@prof.educacao.sp.gov.br",
       "EDIANE VIEIRA DA SILVA": "ediane@prof.educacao.sp.gov.br",
       "EDILEUSA NUNES PEREIRA": "edileusa@prof.educacao.sp.gov.br",
       "EDUARDO HENRIQUE DA FONSECA": "henriquefonseca@prof.educacao.sp.gov.br",
@@ -1009,40 +1005,60 @@
       "ELISABETE APARECIDA PIRES": "elisabetepires@prof.educacao.sp.gov.br",
       "ELZA DE FARIA PEREIRA": "elzafariapereira@prof.educacao.sp.gov.br",
       "EMERSON GABLER DE ALMEIDA": "egabler@prof.educacao.sp.gov.br",
-      "ERINEIDE LEITE ARAGAO NERY": "erineidearagao@prof.educacao.sp.gov.br",
       "EUZELI ARAUJO DE OLIVEIRA": "euzeli@prof.educacao.sp.gov.br",
       "FABIANO AUGUSTO PIEDADE": "fabianoaugusto@prof.educacao.sp.gov.br",
       "FABIO CAMILO": "camilof@prof.educacao.sp.gov.br",
       "FERNANDO JOSE DA SILVA FILHO": "fernandojs@prof.educacao.sp.gov.br",
       "FLAVIA CRISTINA APARECIDA BICHLER": "flaviacri@prof.educacao.sp.gov.br",
       "FLAVIO CARDOSO FLEURY": "flaviofleury@prof.educacao.sp.gov.br",
+      "FRANCISCA EDIVANIA DE MORAIS COSTA": "fedivania@prof.educacao.sp.gov.br",
       "GABRIELA SERIGHELLI DE MELO": "gabrielaserighelli@prof.educacao.sp.gov.br",
+      "GELSON DE ALMEIDA BATISTA": "gelsonalmeida@prof.educacao.sp.gov.br",
       "GENILTON DE OLIVEIRA SILVA": "genilton@prof.educacao.sp.gov.br",
       "GIANI CRISTINA DO PRADO": "gianiprado@prof.educacao.sp.gov.br",
       "INGRYD CAROLINA SUGUIMOTO VIEIRA": "ingryd@prof.educacao.sp.gov.br",
       "IVANILDES DOS SANTOS OSHIKAWA": "oshikawa@prof.educacao.sp.gov.br",
       "JANINA DOS PASSOS BRAGA DE ALMEIDA": "janinabraga@prof.educacao.sp.gov.br",
+      "JOSE APARECIDO DA SILVA": "joseaparecidosilva@prof.educacao.sp.gov.br",
       "JUAREZ GOMES DE MAGALHAES FILHO": "juarezgomes@prof.educacao.sp.gov.br",
       "JUREMA SOLEDADE FURINI SANTOS": "juremas@prof.educacao.sp.gov.br",
       "KATIUSCIA ALVES BOMFIM": "katiusciabomfim@prof.educacao.sp.gov.br",
-      "KETHY REGINA DA SILVA DOMINGOS COSTA": "kethy@prof.educacao.sp.gov.br",
       "LUANA CAROLINE ALVES LIMA": "luanalima01@prof.educacao.sp.gov.br",
-      "LUANA DE OLIVEIRA SILVA": "luanaoliveira@prof.educacao.sp.gov.br",
-      "LUCIANO MOREIRA DE AZEVEDO": "lucianoazevedo@prof.educacao.sp.gov.br",
+      "LUANA DE FREITAS SILVA": "luanafreitas@prof.educacao.sp.gov.br",
+      "LUCIANA NOVAIS CORREIA SANTOS": "novaiscorreia@prof.educacao.sp.gov.br",
+      "LUCIANO MOREIRA DE AZEVEDO": "lucianomoreira@prof.educacao.sp.gov.br",
       "MARCIEL DA SILVA": "marcielsilva@prof.educacao.sp.gov.br",
+      "MARIA HELENA CUNHA MORO": "marcunha@prof.educacao.sp.gov.br",
+      "MARIA QUITÉRIA FERREIRA DOS SANTOS": "quiteriasantos@prof.educacao.sp.gov.br",
       "MARINA DA CONCEICAO FRANCISCO SILVA": "marinafrancisco@prof.educacao.sp.gov.br",
-      "MAURICIO DE BARROS SANTOS": "mauriciobarros@prof.educacao.sp.gov.br",
+      "MAURICIO DE BARROS SANTOS": "mauriciobsantos@prof.educacao.sp.gov.br",
+      "MICHELE DE PINHO MORAES": "michelepinho@prof.educacao.sp.gov.br",
       "MOISES ANTONIO DE BARROS": "moisesbarros@prof.educacao.sp.gov.br",
+      "PAULA ARMANI VILA": "paulaarmani@prof.educacao.sp.gov.br",
       "PAULO ROBERTO DA SILVA ITO": "pauloito@prof.educacao.sp.gov.br",
-      "RODRIGO VIEIRA": "rodrigovieira@prof.educacao.sp.gov.br",
-      "ROSANGELA CAFASSO MOREIRA": "rosangelacafasso@prof.educacao.sp.gov.br",
+      "PEDRO ZANOTTI FILHO": "pedrozanotti@prof.educacao.sp.gov.br",
+      "RAUL PEREIRA VILERA JUNIOR": "vilera@prof.educacao.sp.gov.br",
+      "REGIANE CURTI DE SOUZA OLIVEIRA": "regianecurti@prof.educacao.sp.gov.br",
+      "REGINA DA SILVA CASTRO": "reginasilvacastro@prof.educacao.sp.gov.br",
+      "RICARDO AMERICO DA SILVA": "ricardoamerico@prof.educacao.sp.gov.br",
+      "ROBERTO SALGADO": "robertosalgado@prof.educacao.sp.gov.br",
+      "RODRIGO VIEIRA": "rodrigovieira1@prof.educacao.sp.gov.br",
+      "ROSANGELA CAFASSO MOREIRA": "cafasso@prof.educacao.sp.gov.br",
+      "ROSIMERY DE SOUZA PESSOA": "rosimerypessoa@prof.educacao.sp.gov.br",
+      "ROSMARA DA SILVA CARDOSO": "rosmaracardoso@prof.educacao.sp.gov.br",
+      "SANDRA CRISTINA MACEDO MORAES": "sandracristinamacedo@prof.educacao.sp.gov.br",
+      "SELMA GOMES DA SILVA": "selmagomess@prof.educacao.sp.gov.br",
+      "SERGIO AGRIPINO VILLA NOVA": "sergioagripino@prof.educacao.sp.gov.br",
+      "SOLANGE ALMEIDA DA SILVA": "almeidafazio@prof.educacao.sp.gov.br",
       "SUZINEIDE SILVA DE FREITAS": "suzineidefreitas@prof.educacao.sp.gov.br",
-      "TITTO AUGUSTO NASCIMENTO SILVA": "tittoaugusto@prof.educacao.sp.gov.br",
-      "VANDERSON HYPPOLITO": "vandersonhyppolito@prof.educacao.sp.gov.br",
+      "THIAGO FABIANO BRITO": "thiagofabiano@prof.educacao.sp.gov.br",
+      "TITTO AUGUSTO NASCIMENTO SILVA": "titto@prof.educacao.sp.gov.br",
+      "VANDERSON HYPPOLITO": "vhypolito@prof.educacao.sp.gov.br",
+      "VANESSA IVETE GOMES DOS SANTOS": "vanessaivete@prof.educacao.sp.gov.br",
       "VANIA PENHA DE BARROS": "vaniapenha@prof.educacao.sp.gov.br",
-      "VIVIANE LEAL CAMERA DE MORAES": "vivianeleal@prof.educacao.sp.gov.br"
+      "VIVIANE LEAL CAMERA DE MORAES": "camera@prof.educacao.sp.gov.br",
+      "WILSON RODRIGUES MOTA": "wmota@prof.educacao.sp.gov.br"
     };
-
     // Marcas dos aparelhos
     const marcas = {
       "TABLET": "SAMSUNG",
